# WEB-Python-HW4

./: README.md  pyproject.toml
front-init/: .pre-commit-config.yaml  main.py
front-init/storage/: data.json
