[tool.poetry]
name = "front-init"
version = "0.1.0"
description = ""
authors = ["Doalina <alinochka1330@gmail.com>"]
readme = "README.md"
packages = [{include = "front_init"}]

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.31.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
